
    In =pimd.conf: igmp-querier-timeout <SEC>=

  - The built-in IGMP /robustness value/ changed from 2 to 3
  - Support for changing the PIM Hello interval.  By Markus Veranen

    In =pimd.conf: hello-interval <SEC>=

  - Support for multiple multicast routing tables, and running multiple
    pimd instances.  By Markus Veranen.  (Only supported on Linux atm.)

** New syntax in pimd.conf

The =pimd.conf= syntax has undergone a major syntax change in this
release.  Mainly, the change is to use dashes =-= instead of underscore
=_= as word separators.  However several settings have been renamed to
be more familiar to commands used by major router vendors:

   - =bsr-candidate= replaces =cand_bootstrap_router=
   - =rp-candidate= replaces =cand_rp=
   - =group-prefix= replaces =group_prefix=
   - =rp-address= replaces =rp_address=
   - =switch_register_threshold= and =switch_data_threshold= have now
     been completely deprecated in favour of =spt-threshold=
   - =hello-interval= replaces =hello_period=

Also, the =default-route-distance= replaces =default_source_preference=
and =default-route-metric= replaces =default-source-metric=.  Actually,
the =preference= sub-option to =phyint= has also been renamed to
=distance=.  See the README or the man page for more information on the
metric preference and admin distance confusion.

/*Note:* The =pimd.conf= parser remains backwards compatible with the
old syntax!/


** Compile Time Features

The following are new features that must be enabled at compile time,
using the =configure= script.  For details, see =./configure --help=

  - Support for adding a generation ID field to PIM Hello messages
  - Allow pimd to continue running despite encountering errors
  - Raise max number of VIFs to 64
  - Allow /32 for VIFs


** Bug Fixes
  - Fix issue #40: FTBS with =./configure --enable-scoped-acls=


* Version 2.2.1: April 20, 2015
** Bug Fixes
  - Fix another problem with issue #22 (reopened), as laid out in